added cover page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,7 +135,7 @@ hr {
 
 #cover-page {
 	position: absolute;
-	background-color: white;
+	background-color: #f8f8f9;
 	width: 100vw;
 	height: 101vh;
 	right: 0;
