--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,14 +21,16 @@ body {
 #intro-page-image {
 	display: inline-block;
 	/*height: 80vh;*/
-	height: 550px;
+	/*height: 550px;*/
+	/*height: 10;*/
+	width: 35vw;
 	float: left;
 }
 
 #intro-page-info {
-	/*width: 50%;*/
-	width: 500px;
-	height: 100px;
+	width: 50%;
+	/*width: 500px;*/
+	/*height: 100px;*/
 	vertical-align: top;
 	/*height: 50vh;*/
 	display: inline-block;
@@ -71,7 +73,8 @@ body {
 
 p {
 	/*font-size: 1.7vh;*/
-	font-size: 13px;
+	/*font-size: 13px;*/
+	font-size: 1vw;
 	line-height: 180%;
 	letter-spacing: .8px;
 	margin-bottom: 20px;
@@ -100,7 +103,8 @@ hr {
 
 .title {
 	/*font-size: 4.1vh;*/
-	font-size: 24px;
+	/*font-size: 24px;*/
+	font-size: 3.1vw;
 }
 
 .footer-div {
@@ -124,7 +128,8 @@ hr {
 .footer > li {
 	margin: 0 40px;
 	/*font-size: 1.5vh;*/
-	font-size: 10px;
+	/*font-size: 10px;*/
+	font-size: .7vw;
 }
 
 .red-line {
@@ -132,10 +137,11 @@ hr {
 	border: none;
 	border-bottom: 1px solid #ff3d32;
 	/*font-size: 1.5vh;*/
-	font-size: 12px;
+	/*font-size: 12px;*/
+	font-size: 1.1vw;
 	letter-spacing: 2px;
 	padding: 5px 15px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .red-line:hover {
