--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,8 @@
 }
 
 * {
-	color: #435363;
+	/*color: #435363;*/
+	color: #2c4c69;
 	/*font-family: Freight;*/
 	font-family: Colfax;
 }
@@ -34,14 +35,23 @@ body {
 	background-color: #f8f8f9;
 }
 
+a {
+	text-decoration: none;
+}
+
+.intro-page {
+	background-color: #f5f4f6;
+}
+
 #intro-page-image {
 	display: inline-block;
 	/*height: 80vh;*/
 	/*height: 550px;*/
 	/*height: 10;*/
 	width: 35vw;
-	float: left;
+	/*float: left;*/
 	position: relative;
+	left: -40px;
 	top: -4vw;
 }
 
@@ -53,16 +63,19 @@ body {
 	top: -1vw;
 	overflow: hidden;
 	height: 45vw;
-
 }
 
 #intro-page-info {
-	width: 50%;
+	width: 48%;
 	/*width: 500px;*/
 	/*height: 100px;*/
 	vertical-align: top;
 	/*height: 50vh;*/
 	display: inline-block;
+}
+
+#intro-page-info p {
+	font-size: 1vw;
 }
 
 #intro-text-columns > .column {
@@ -126,14 +139,16 @@ hr {
 }
 
 .logo {
-	font-size: 3.6vh;
+	font-size: 2.5vw;
 	text-align: left;
+	font-family: Freight;
 }
 
 .title {
 	/*font-size: 4.1vh;*/
 	/*font-size: 24px;*/
 	font-size: 2.6vw;
+	font-family: Freight;
 }
 
 .footer-div {
@@ -192,8 +207,8 @@ hr {
 }
 
 #cover-page > img {
-	margin-top: 15%;
-	height: 40vh;
+	margin-top: 38vh;
+	height: 20vh;
 }
 
 /*MEMBERSHIP ONLY*/
@@ -375,12 +390,14 @@ h3 {
 	margin: 2vw 0;
 }
 
-.form-item > input, .form-item > select {
+.form-item > input, .form-item > select, .form-item > input[type="checkbox"] {
 	border: 0.10vw solid #435363;
 	margin-right: 1.5vw;
 	font-size: 1.2vw;
 	background-color: #f8f8f9;
 	text-indent: 1vw;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
 }
 
 .form-item > input {
@@ -388,7 +405,7 @@ h3 {
 	width: 20vw;
 }
 
-.form-item > input:focus, .form-item > select:focus {
+.form-item > input:focus, .form-item > select:focus, button, #invite-select {
 	outline: none;
 }
 
@@ -397,7 +414,7 @@ h3 {
 	max-width: 13vw;
 	min-width: 10vw;
 	position: relative;
-	top: -0.1vw;
+	top: .5px;
 
    -webkit-appearance: none; 
    -moz-appearance: none;
@@ -425,6 +442,46 @@ input:-ms-input-placeholder {  color: #adadad !important;  }
 	color: #adadad;
 }
 
+form h3 {
+	text-align: center;
+	font-family: Freight-strong!important;
+}
+
+.indent-number {
+	display: inline-block;
+	position: relative;
+	margin-right: 1vw;
+	top: .8vw;
+}
+
+.form-item.form-question {
+	margin-bottom: 0px;
+}
+
+input.long {
+	width: 30vw;
+}
+
+input.x-long {
+	width: 40vw;
+}
+
+input.long-plus {
+	width: 32vw;
+}
+
+.long-minus {
+	width: 22vw;
+}
+
+select.long-minus {
+	min-width: 20vw;
+}
+
+#invite-select {
+	display: none;
+	margin: auto;
+}
 
 /*MOBILE*/
 @media screen and (max-width: 800px) {
